day1/main.tf
data "aws_vpc" "default" {
  default = true
}


resource "aws_security_group" "allow_all" {
  name        = "allow_all_terraform"
  description = "Allow all inbound and outbound traffic"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "allow_all_terraform"
    }
}       

resource "aws_instance" "web" {
  ami           = "ami-090d68841c2a28756" # Amazon Linux 2 AMI
  instance_type = "t3.micro"
  vpc_security_group_ids = [aws_security_group.allow_all.id]

  tags = {
    Name = "WebServer"
  }
}
